--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@
     </section>
 
     <section class="contact_section">
+        <div class="contact_paragraph">
         <p class="paragh_1">
-            I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
+            I'm always <br>interested in hearing <br>about new projects, so if you'd like to chat please get in touch.
         </p>
+    </div>
+    <div class="contact_form">
         <form action="" method="post"> 
             <input type="text" name="input1" placeholder="Full name" max="30" required class="input1">
             <input type="email" name="input2" placeholder="Email address" required class="input2">
@@ -87,17 +90,13 @@
             rows="5"
             cols="5" 
             maxlength="500"
-            required
-            >
-
+            required>
             </textarea>
-
+            <button type="submit" class="contact_button">Get in touch</button>
         </form>
-
-
+    </div>
     </section>
 
-    
     <footer class="contact">
         <ul class="container socialGroup">
             <li class="social-media">
@@ -122,7 +121,5 @@
             </li>
         </ul>
     </footer>
-
 </body>
-
 </html>
