Add contact from to Index

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         <form action="" method="post"> 
             <input type="text" name="input1" placeholder="Full name" max="30" required class="input1">
             <input type="email" name="input2" placeholder="Email address" required class="input2">
-            <textarea name="input3" placeholder="Message" 
-            rows="5"
-            cols="5" 
+            <textarea name="input3" placeholder="Message" class="input3"
+            rows="15"
+            cols="10" 
             maxlength="500"
             required
             >
