Modify css file and index file

--- a/index.html
+++ b/index.html
@@ -88,12 +88,7 @@
             <hr>
             <input type="email" name="input2" placeholder="Email address" required class="input2">
             <hr>  
-            <textarea name="input3" placeholder="Message" class="input3"
-            rows="15"
-            cols="10" 
-            maxlength="500"
-            required>
-            </textarea>
+            <textarea name="input3" placeholder="Enter text here" cols="20" rows="30" maxlength="500" class="input3" required></textarea>
             <button type="submit" class="contact_button">Get in touch</button>
         </form>
     </div>
