--- a/index.html
+++ b/index.html
@@ -88,12 +88,7 @@
             <hr>
             <input type="email" name="input2" placeholder="Email address" required class="input2">
             <hr>  
-            <textarea name="input3" placeholder="Message" class="input3"
-            rows="15"
-            cols="10" 
-            maxlength="500"
-            required>
-            </textarea>
+            <textarea class="input3" name="input3" class="input3" rows="5"  cols="35" maxlength="500" placeholder="Enter Text Here" required> </textarea>
             <button type="submit" class="contact_button">Get in touch</button>
         </form>
     </div>
