Add projects worked on and corrected the submit form link of formspree

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </nav>
     </header>
-    <section id="menu" class="menu-invisible">
+    <section class="menu-invisible">
         <button type="button" id="closeButton"><img src="icons/close-icon.svg" alt="close icon"></button>
         <ul class="container content menu">
             <li class="textPlaceholder menu-item"><a href="#projects" aria-label="Portfolio"> Portfolio</a></li>
@@ -203,7 +203,7 @@
       </h2>
       <form
         class="contact_form"
-        action="https://formspree.io/f/meqnezezgit"
+        action="https://formspree.io/f/meqnezez"
         method="post"
       >
         <input
