--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
     <section id="presentation" class="container">
       <div class="container content">
         <div>
-          <h1>
+          <h1 class="pre_header">
             Hey There. <br />
             I’m Stephen
           </h1>
           <h2>I’m a Software Developer</h2>
-          <p>
+          <p class="pre_paragraph">
             I can help you build a product , feature or website Look through
             some of my work and experience! If you like what you see and have a
             project you need coded, don’t hestiate to contact me.
           </p>
         </div>
-        <ul class="container socialGroup">
+        <ul class="container socialGroup pre_socialgrp">
           <li class="social-media">
             <a
               rel="noopener noreferrer"
@@ -114,7 +114,7 @@
     <section id="about" class="container">
         <div class="container content about">
             <h1> About me </h1>
-            <p> Hello I’m a software developer! I can help you build a product , feature or website Look through some of
+            <p class="about_para" > Hello I’m a software developer! I can help you build a product , feature or website Look through some of
                 my work and experience! If you like what you see and have a project you need coded, don’t hestiate to
                 contact me. </p>
             <a rel="noopener noreferrer" href="#" class="interaction" aria-label="Get my Resume"> Get My Resume </a>
